--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "src/app.js",
   "dependencies": {
     "react": "^0.14.3",
-    "react-render-visualizer-decorator": "^0.3.0"
+    "react-render-visualizer-decorator": "^0.3.0",
+    "react-dom": "^0.14.3"
   },
   "devDependencies": {
     "babel-core": "^5.0.0",
@@ -15,7 +16,6 @@
     "less-loader": "^2.2.2",
     "lodash": "^3.10.1",
     "minimist": "^1.2.0",
-    "react-dom": "^0.14.3",
     "style-loader": "^0.13.0",
     "webpack": "^1.12.9"
   },
